--- a/app/src/main/res/menu/menu_products.xml
+++ b/app/src/main/res/menu/menu_products.xml
@@ -6,8 +6,9 @@
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_white_24dp"
-        android:title="Chat"
-        app:showAsAction="ifRoom" />
+        android:title="Search"
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 
     <item
         android:id="@+id/action_more"
