--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -39,12 +39,12 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/rDescriptionTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="This is the post description that"
-            android:textSize="20sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/rDescriptionTv"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="This is the post description that"-->
+            <!--android:textSize="20sp" />-->
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
