--- a/app/src/main/res/menu/menu_products.xml
+++ b/app/src/main/res/menu/menu_products.xml
@@ -6,14 +6,14 @@
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_white_24dp"
-        android:title="Search"
+        android:name="Search"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
 
     <item
         android:id="@+id/action_more"
         android:icon="@drawable/ic_more_vert_white_24dp"
-        android:title="Chat"
+        android:name="Chat"
         app:showAsAction="ifRoom" />
 
 </menu>
